[gd_scene load_steps=8 format=3 uid="uid://bbyihno4uk3q7"]

[ext_resource type="PackedScene" uid="uid://c16w22k328oqp" path="res://Editor/Road/RoadNodePropertiesUI.tscn" id="1_2olcp"]
[ext_resource type="Script" path="res://Editor/Scripts/EditorCamera.gd" id="1_nfa8o"]
[ext_resource type="PackedScene" uid="uid://dl56mby6n2hiu" path="res://Editor/Road/RoadPropertiesUI.tscn" id="2_0cxd4"]
[ext_resource type="PackedScene" uid="uid://jfef8x3bl627" path="res://Editor/InteractiveMap.tscn" id="2_xocc0"]
[ext_resource type="PackedScene" uid="uid://cptpsvgtq4jgc" path="res://Editor/Functional/RoadNode.tscn" id="3_nyxif"]
[ext_resource type="Script" path="res://Editor/Scripts/EditorInputHandler.gd" id="3_yc3pc"]
[ext_resource type="Script" path="res://Editor/EditorEventListener.gd" id="4_miouu"]

[node name="MapEditor" type="Node3D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="RoadNodePropertiesUI" parent="UI/VBoxContainer/HBoxContainer" instance=ExtResource("1_2olcp")]
unique_name_in_owner = true
layout_mode = 2

[node name="RoadPropertiesUI" parent="UI/VBoxContainer/HBoxContainer" instance=ExtResource("2_0cxd4")]
unique_name_in_owner = true
layout_mode = 2

[node name="EditorCamera" type="Camera3D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_nfa8o")

[node name="InteractiveMap" parent="." instance=ExtResource("2_xocc0")]
unique_name_in_owner = true

[node name="PreviewElement" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="RoadNode" parent="PreviewElement" instance=ExtResource("3_nyxif")]
isPreviewNode = true

[node name="EditorInputHandler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_yc3pc")

[node name="EditorEventListener" type="Node3D" parent="."]
script = ExtResource("4_miouu")
